  * Fix unlikely memory leak in lilv_plugin_instantiate()
  * Support denoting latency ports with lv2:designation lv2:latency
  * Allow passing NULL port_class to lilv_plugin_get_port_by_designation
  * Call GetProcAddress with correct calling convention on Windows
  * Add support for running plugins from Python by Kaspar Emanuel
  * Clean up after test suite so multiple runs are successful
  * lv2info: Don't display invalid control maxes and defaults
    (patch from Robin Gareus)
  * lilvmm.hpp: Add wrappers for UI API

 -- David Robillard <d@drobilla.net>  Mon, 30 Dec 2013 12:13:25 -0500

lilv (0.16.0) stable;

  * Add lilv_world_ask() for easily checking if a statement exists
  * Add lilv_world_get() and lilv_port_get() for easily getting one value
  * Add lilv_nodes_merge()
  * Make lilv_plugin_get_port_by_designation() return a const pointer
  * Require a URI for lilv_state_to_string() and fail gracefully otherwise
  * Fail gracefully when lilv_state_new_from_string() is called on NULL
  * Make state loading functions fall back to lv2:default for port values,
    so a plugin description can be loaded as default state
  * Ignore state ports with no value instead of printing an error
  * Support atom:supports in lilv_port_supports_event()
  * Add va_list variant of lilv_plugin_get_num_ports_of_class()
  * Fix several plugin functions that failed to load data if called first
  * Correctly depend on serd at build time (fix compilation in odd cases)
  * Disable timestamps in HTML documentation for reproducible build
  * lilvmm.hpp: Support varargs for Plugin::get_num_ports_of_class()
  * lilvmm.hpp: Add several missing methods
  * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Mon, 18 Feb 2013 16:43:10 -0500

lilv (0.14.4) stable;

  * Deprecate old flawed Lilv::Instance constructors
  * Fix documentation for ui_type parameter of lilv_ui_is_supported()